@@ -22,6 +22,10 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.*;
 
 @Service
@@ -143,69 +147,74 @@ public class InmuebleServiceImpl implements InmuebleService {
     }
 
     private List<ReservoImage> saveImages(List<MultipartFile> images) {
+//        List<ReservoImage> reservoImages = new ArrayList<>();
+//        try {
+//            for (MultipartFile file : images) {
+//                Map uploadResult = cloudinary.uploader().upload(file.getBytes(),
+//                        ObjectUtils.asMap());
+//                ReservoImage image = new ReservoImage((String) uploadResult.get("public_id"),(String) uploadResult.get("secure_url"));
+//                imageDAO.save(image);
+//                reservoImages.add(image);
+//            }
+//        } catch (IOException e) {
+//            throw new RuntimeException("Error al guardar las imágenes");
+//        }
+
         List<ReservoImage> reservoImages = new ArrayList<>();
+        Path uploadDir = Paths.get("uploads");
+
         try {
+
+            Files.createDirectories(uploadDir);// Crear la carpeta si no existe
+
             for (MultipartFile file : images) {
-                Map uploadResult = cloudinary.uploader().upload(file.getBytes(),
-                        ObjectUtils.asMap());
-                ReservoImage image = new ReservoImage((String) uploadResult.get("public_id"),(String) uploadResult.get("secure_url"));
-                imageDAO.save(image);
-                reservoImages.add(image);
+                String originalFilename = file.getOriginalFilename();
+
+                String filename = UUID.randomUUID() + "_" + originalFilename;
+                Path filePath = uploadDir.resolve(filename);
+
+                Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);// Guardar archivo
+
+                ReservoImage reservoImage = new ReservoImage("http://localhost:8081/uploads/" + filename);
+                imageDAO.save(reservoImage);
+                reservoImages.add(reservoImage);
             }
         } catch (IOException e) {
             throw new RuntimeException("Error al guardar las imágenes");
         }
 
-//        List<String> paths = new ArrayList<>();
-//        Path uploadDir = Paths.get("uploads");
-//
-//        try {
-//
-//            Files.createDirectories(uploadDir);// Crear la carpeta si no existe
-//
-//            for (MultipartFile file : images) {
-//                String originalFilename = file.getOriginalFilename();
-//
-//                String filename = UUID.randomUUID() + "_" + originalFilename;
-//                Path filePath = uploadDir.resolve(filename);
-//
-//                Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);// Guardar archivo
-//
-//                paths.add(filename);
-//            }
-//        } catch (IOException e) {
-//            throw new RuntimeException("Error al guardar las imágenes");
-//        }
-//
         return reservoImages;
     }
 
+
     private void removeImages(List<ReservoImage> images) {
-//        Path uploadDir = Paths.get("uploads");
-//
+        Path uploadDir = Paths.get("uploads");
+//        List<String> paths = images.stream().map(ReservoImage::getUrl).toList();
+
+        try {
+
+            for (ReservoImage image : images) {
+
+                String pathToImage = uploadDir + image.getUrl().replace("http://localhost:8081/uploads", "");
+
+                Files.delete(Path.of(pathToImage));
+                imageDAO.delete(image);
+
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 //        try {
+//            for (ReservoImage image : images) {
+//                cloudinary.uploader().destroy(
+//                        image.getPublicId(),
+//                        ObjectUtils.asMap("resource_type", "image")
+//                );
 //
-//            for (String pathString : images) {
-//
-//                String pathToImage = uploadDir + "/" + pathString;
-//
-//                Files.delete(Path.of(pathToImage));
 //
 //            }
 //        } catch (IOException e) {
 //            throw new RuntimeException("Error al eliminar las imágenes");
 //        }
-        try {
-            for (ReservoImage image : images) {
-                cloudinary.uploader().destroy(
-                        image.getPublicId(),
-                        ObjectUtils.asMap("resource_type", "image")
-                );
-
-
-            }
-        } catch (IOException e) {
-            throw new RuntimeException("Error al eliminar las imágenes");
-        }
     }
 }
